# univention-support-info

./: .gitignore  .gitlab-ci.yml  README.md  setup.cfg  setup.py  setup.sh  univention-collect-support-info.py  univention-support-info
usi-check/: usi  usi-check
usi-check/lib/: ucr.py
usi-check/tests/general/: 01general_info.py  01general_info.sh  02templates.sh  03segfaults.py  03segfaults.sh  03servfail.py  03too_many_open_files.sh  04joinstatus.py  04joinstatus.sh  04license.sh  05server-password-change.sh
usi-check/tests/ldap/: 01listener.sh  02permissions.sh  03failed_ldif.py
usi-check/tests/samba4/: connector-dn.py  connector.py  heimdal.py  realm.py
usi-check/tests/ucr/: 00ucr.py
