[metadata]
name = univention-supportinfo
version = 0.0.1
author = Univention GmbH
author_email = packages@univention.de
description = Collect system information for support case
long_description = file: README.rst
keywords = UCS, support
url = https://git.knut.univention.de/univention/support/univention-support-info/
license = GNU Affero General Public License v3
license_files = LICENSE
classifiers=
    Development Status :: 6 - Mature
    Environment :: Console
    Intended Audience :: System Administrators
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Topic :: System :: Monitoring

[options]
zip_safe = True
include_package_data = False
python_requires= >=2.7
packages =
package_dir =
scripts =
    univention-support-info
install_requires =

[bdist_wheel]
universal=1

[flake8]
max-line-length = 220
ignore =
    # W191 indentation contains tabs
    W191,
exclude =
    build/
    dists/
    usi-check/
    venv/
